--- a/P1y2/Práctica1y2.ipynb
+++ b/P1y2/Práctica1y2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNl12Lp2cpo7yJFvTIB+zxR",
+      "authorship_tag": "ABX9TyOiksO9x4tCn/dDIJonNziP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SaraGimenez23/ProgAvanGIT1/blob/main/P1y2/Pr%C3%A1ctica1y2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "M7nZSu5turwX"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -122,6 +113,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejercicio 2\n"
+      ],
+      "metadata": {
+        "id": "70ZqhBGy4ix-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JKWd-dqY4pJj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
