--- a/P1y2/Práctica1y2.ipynb
+++ b/P1y2/Práctica1y2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8WzZSMtx3fdmhNx/ThyqX",
+      "authorship_tag": "ABX9TyPsAFDw5MHMEcEWoMos2Dqr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -548,6 +548,116 @@
       "metadata": {
         "id": "YPSiwMg9ehKq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Definir la lista de tareas como una variable global\n",
+        "tasks = []\n",
+        "\n",
+        "def add_task(task):\n",
+        "    \"\"\"\n",
+        "    Agrega una nueva tarea a la lista global de tareas.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    task (str): La tarea a agregar.\n",
+        "    \"\"\"\n",
+        "    global tasks  # Usamos la variable global 'tasks'\n",
+        "    tasks.append(task)\n",
+        "    print(f\"Tarea '{task}' añadida con éxito.\")\n",
+        "\n",
+        "def remove_task(task):\n",
+        "    \"\"\"\n",
+        "    Elimina una tarea de la lista global de tareas si existe.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    task (str): La tarea a eliminar.\n",
+        "    \"\"\"\n",
+        "    global tasks  # Usamos la variable global 'tasks'\n",
+        "    if task in tasks:\n",
+        "        tasks.remove(task)\n",
+        "        print(f\"Tarea '{task}' eliminada con éxito.\")\n",
+        "    else:\n",
+        "        print(f\"Tarea '{task}' no encontrada en la lista.\")\n",
+        "\n",
+        "def list_tasks():\n",
+        "    \"\"\"\n",
+        "    Enumera todas las tareas almacenadas en la lista global de tareas.\n",
+        "    \"\"\"\n",
+        "    global tasks  # Usamos la variable global 'tasks'\n",
+        "    if tasks:\n",
+        "        print(\"\\nTareas pendientes:\")\n",
+        "        for i, task in enumerate(tasks, 1):\n",
+        "            print(f\"{i}. {task}\")\n",
+        "    else:\n",
+        "        print(\"No hay tareas pendientes.\")\n",
+        "\n",
+        "def task_manager():\n",
+        "    \"\"\"\n",
+        "    Administra las operaciones de agregar, modificar y enumerar tareas.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    def modify_task():\n",
+        "        \"\"\"\n",
+        "        Modifica la primera tarea en la lista de tareas.\n",
+        "        Usa 'global' para modificar la lista de tareas global.\n",
+        "        \"\"\"\n",
+        "        global tasks  # Accedemos a la lista de tareas global\n",
+        "        if tasks:\n",
+        "            print(f\"Tarea actual: {tasks[0]}\")\n",
+        "            nueva_tarea = input(\"Ingrese la nueva descripción para la primera tarea: \")\n",
+        "            tasks[0] = nueva_tarea\n",
+        "            print(f\"Tarea modificada con éxito a: {nueva_tarea}\")\n",
+        "        else:\n",
+        "            print(\"No hay tareas para modificar.\")\n",
+        "\n",
+        "    # Menú de opciones del task_manager\n",
+        "    while True:\n",
+        "        print(\"\\nGestión de Tareas:\")\n",
+        "        print(\"1. Ver todas las tareas\")\n",
+        "        print(\"2. Agregar una nueva tarea\")\n",
+        "        print(\"3. Modificar la primera tarea\")\n",
+        "        print(\"4. Eliminar una tarea\")\n",
+        "        print(\"5. Salir\")\n",
+        "\n",
+        "        opcion = input(\"Seleccione una opción: \")\n",
+        "\n",
+        "        if opcion == '1':\n",
+        "            list_tasks()\n",
+        "\n",
+        "        elif opcion == '2':\n",
+        "            nueva_tarea = input(\"Ingrese la nueva tarea: \")\n",
+        "            add_task(nueva_tarea)\n",
+        "\n",
+        "        elif opcion == '3':\n",
+        "            modify_task()\n",
+        "\n",
+        "        elif opcion == '4':\n",
+        "            tarea_eliminar = input(\"Ingrese la tarea a eliminar: \")\n",
+        "            remove_task(tarea_eliminar)\n",
+        "\n",
+        "        elif opcion == '5':\n",
+        "            print(\"Saliendo del administrador de tareas...\")\n",
+        "            break\n",
+        "\n",
+        "        else:\n",
+        "            print(\"Opción no válida. Intente de nuevo.\")\n",
+        "\n",
+        "def main():\n",
+        "    \"\"\"\n",
+        "    Función principal para ejecutar el programa.\n",
+        "    \"\"\"\n",
+        "    task_manager()  # Inicia el administrador de tareas\n",
+        "\n",
+        "# Ejecutar la función principal\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "8IHFgRjFjb_D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
