--- a/P1y2/Práctica1y2.ipynb
+++ b/P1y2/Práctica1y2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPsAFDw5MHMEcEWoMos2Dqr",
+      "authorship_tag": "ABX9TyM5TbIz2GfhhRkb7xsS/tYQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -654,10 +654,376 @@
         "    main()"
       ],
       "metadata": {
-        "id": "8IHFgRjFjb_D"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8IHFgRjFjb_D",
+        "outputId": "d44fdf9c-11d2-40fe-f727-b5b3bb0b3ba4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 1\n",
+            "No hay tareas pendientes.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 2\n",
+            "Ingrese la nueva tarea: Comprar Leche\n",
+            "Tarea 'Comprar Leche' añadida con éxito.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 2\n",
+            "Ingrese la nueva tarea: Llamar al doctor\n",
+            "Tarea 'Llamar al doctor' añadida con éxito.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 2\n",
+            "Ingrese la nueva tarea: Hacer ejercicio\n",
+            "Tarea 'Hacer ejercicio' añadida con éxito.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 1\n",
+            "\n",
+            "Tareas pendientes:\n",
+            "1. Comprar Leche\n",
+            "2. Llamar al doctor\n",
+            "3. Hacer ejercicio\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 3\n",
+            "Tarea actual: Comprar Leche\n",
+            "Ingrese la nueva descripción para la primera tarea: Comprar Alcachofas\n",
+            "Tarea modificada con éxito a: Comprar Alcachofas\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 4\n",
+            "Ingrese la tarea a eliminar: 2\n",
+            "Tarea '2' no encontrada en la lista.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 4\n",
+            "Ingrese la tarea a eliminar: Llamar al doctor\n",
+            "Tarea 'Llamar al doctor' eliminada con éxito.\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 1\n",
+            "\n",
+            "Tareas pendientes:\n",
+            "1. Comprar Alcachofas\n",
+            "2. Hacer ejercicio\n",
+            "\n",
+            "Gestión de Tareas:\n",
+            "1. Ver todas las tareas\n",
+            "2. Agregar una nueva tarea\n",
+            "3. Modificar la primera tarea\n",
+            "4. Eliminar una tarea\n",
+            "5. Salir\n",
+            "Seleccione una opción: 5\n",
+            "Saliendo del administrador de tareas...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejercicio 6"
+      ],
+      "metadata": {
+        "id": "sCmufT4Ck91g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_strings_starting_with_letter(strings, letter):\n",
+        "    \"\"\"\n",
+        "    Imprime todas las cadenas que comienzan con la letra especificada.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    strings (list): La lista de cadenas.\n",
+        "    letter (str): La letra con la que deben comenzar las cadenas.\n",
+        "    \"\"\"\n",
+        "    print(f\"\\nCadenas que comienzan con la letra '{letter}':\")\n",
+        "    found = False\n",
+        "    for string in strings:\n",
+        "        if string.startswith(letter):\n",
+        "            print(string)\n",
+        "            found = True\n",
+        "    if not found:\n",
+        "        print(f\"No se encontraron cadenas que comiencen con '{letter}'.\")\n",
+        "\n",
+        "\n",
+        "def count_substring(strings, substring):\n",
+        "    \"\"\"\n",
+        "    Cuenta cuántas cadenas contienen la subcadena especificada.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    strings (list): La lista de cadenas.\n",
+        "    substring (str): La subcadena a buscar.\n",
+        "    \"\"\"\n",
+        "    count = sum(substring in string for string in strings)\n",
+        "    print(f\"\\nNúmero de cadenas que contienen la subcadena '{substring}': {count}\")\n",
+        "\n",
+        "\n",
+        "def find_longest_and_shortest(strings):\n",
+        "    \"\"\"\n",
+        "    Encuentra la cadena más larga y la más corta de la lista.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    strings (list): La lista de cadenas.\n",
+        "    \"\"\"\n",
+        "    if strings:  # Verificar que la lista no esté vacía\n",
+        "        longest = max(strings, key=len)\n",
+        "        shortest = min(strings, key=len)\n",
+        "        print(f\"\\nLa cadena más larga es: '{longest}'\")\n",
+        "        print(f\"La cadena más corta es: '{shortest}'\")\n",
+        "    else:\n",
+        "        print(\"La lista de cadenas está vacía.\")\n",
+        "\n",
+        "\n",
+        "def compare_strings(strings):\n",
+        "    \"\"\"\n",
+        "    Verifica si dos cadenas específicas de la lista son el mismo objeto.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    strings (list): La lista de cadenas.\n",
+        "    \"\"\"\n",
+        "    if len(strings) < 2:\n",
+        "        print(\"No hay suficientes cadenas para comparar.\")\n",
+        "        return\n",
+        "\n",
+        "    # Se comparan las dos primeras cadenas de la lista\n",
+        "    str1 = strings[0]\n",
+        "    str2 = strings[1]\n",
+        "    if str1 is str2:\n",
+        "        print(f\"\\nLas cadenas '{str1}' y '{str2}' son el mismo objeto.\")\n",
+        "    else:\n",
+        "        print(f\"\\nLas cadenas '{str1}' y '{str2}' NO son el mismo objeto.\")\n",
+        "\n",
+        "\n",
+        "def check_long_string(strings):\n",
+        "    \"\"\"\n",
+        "    Verifica si alguna cadena de la lista tiene una longitud mayor que 10.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    strings (list): La lista de cadenas.\n",
+        "    \"\"\"\n",
+        "    for string in strings:\n",
+        "        if len(string) > 10:\n",
+        "            print(f\"\\nHay al menos una cadena con más de 10 caracteres: '{string}'\")\n",
+        "            break\n",
+        "    else:\n",
+        "        print(\"\\nNinguna cadena tiene más de 10 caracteres.\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    \"\"\"\n",
+        "    Función principal para ejecutar el programa.\n",
+        "    \"\"\"\n",
+        "    # Leer la lista de cadenas desde el teclado\n",
+        "    strings = []\n",
+        "    n = int(input(\"¿Cuántas cadenas desea ingresar? \"))\n",
+        "    for _ in range(n):\n",
+        "        cadena = input(\"Ingrese una cadena: \")\n",
+        "        strings.append(cadena)\n",
+        "\n",
+        "    while True:\n",
+        "        print(\"\\nMenú de opciones:\")\n",
+        "        print(\"1. Imprimir cadenas que comienzan con una letra\")\n",
+        "        print(\"2. Contar cadenas que contienen una subcadena\")\n",
+        "        print(\"3. Encontrar la cadena más larga y la más corta\")\n",
+        "        print(\"4. Verificar si dos cadenas específicas son el mismo objeto\")\n",
+        "        print(\"5. Verificar cadenas con longitud mayor que 10\")\n",
+        "        print(\"6. Salir\")\n",
+        "\n",
+        "        opcion = input(\"Seleccione una opción: \")\n",
+        "\n",
+        "        if opcion == '1':\n",
+        "            letra = input(\"Ingrese la letra con la que deben comenzar las cadenas: \")\n",
+        "            if len(letra) == 1:  # Verificar que sea una sola letra\n",
+        "                print_strings_starting_with_letter(strings, letra)\n",
+        "            else:\n",
+        "                print(\"Por favor, ingrese solo una letra.\")\n",
+        "\n",
+        "        elif opcion == '2':\n",
+        "            substring = input(\"Ingrese la subcadena a buscar: \")\n",
+        "            count_substring(strings, substring)\n",
+        "\n",
+        "        elif opcion == '3':\n",
+        "            find_longest_and_shortest(strings)\n",
+        "\n",
+        "        elif opcion == '4':\n",
+        "            compare_strings(strings)\n",
+        "\n",
+        "        elif opcion == '5':\n",
+        "            check_long_string(strings)\n",
+        "\n",
+        "        elif opcion == '6':\n",
+        "            print(\"Saliendo del programa...\")\n",
+        "            break\n",
+        "\n",
+        "        else:\n",
+        "            print(\"Opción no válida. Intente de nuevo.\")\n",
+        "\n",
+        "\n",
+        "# Ejecutar la función principal\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "its2TWdAlBF9",
+        "outputId": "4310d77d-d140-4398-91aa-75df4381694b"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Cuántas cadenas desea ingresar? 3\n",
+            "Ingrese una cadena: Manzana\n",
+            "Ingrese una cadena: Pera\n",
+            "Ingrese una cadena: Plátano\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 1\n",
+            "Ingrese la letra con la que deben comenzar las cadenas: A\n",
+            "\n",
+            "Cadenas que comienzan con la letra 'A':\n",
+            "No se encontraron cadenas que comiencen con 'A'.\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 1\n",
+            "Ingrese la letra con la que deben comenzar las cadenas: P\n",
+            "\n",
+            "Cadenas que comienzan con la letra 'P':\n",
+            "Pera\n",
+            "Plátano\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 2\n",
+            "Ingrese la subcadena a buscar: Plátano\n",
+            "\n",
+            "Número de cadenas que contienen la subcadena 'Plátano': 1\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 3\n",
+            "\n",
+            "La cadena más larga es: 'Manzana'\n",
+            "La cadena más corta es: 'Pera'\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 4\n",
+            "\n",
+            "Las cadenas 'Manzana' y 'Pera' NO son el mismo objeto.\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 5\n",
+            "\n",
+            "Ninguna cadena tiene más de 10 caracteres.\n",
+            "\n",
+            "Menú de opciones:\n",
+            "1. Imprimir cadenas que comienzan con una letra\n",
+            "2. Contar cadenas que contienen una subcadena\n",
+            "3. Encontrar la cadena más larga y la más corta\n",
+            "4. Verificar si dos cadenas específicas son el mismo objeto\n",
+            "5. Verificar cadenas con longitud mayor que 10\n",
+            "6. Salir\n",
+            "Seleccione una opción: 6\n",
+            "Saliendo del programa...\n"
+          ]
+        }
+      ]
     }
   ]
 }
